syntax = "proto3";

package sso;

option go_package = "github.com/LavaJover/shvark-sso-service/proto/gen;ssopb";

service SSOService{
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc GetUserByToken (GetUserByTokenRequest) returns (GetUserByTokenResponse);
    rpc Setup2FA (Setup2FARequest) returns (Setup2FAResponse);
    rpc Verify2FA (Verify2FARequest) returns (Verify2FAResponse);
}

message Verify2FARequest {
    string user_id = 1;
    string code = 2;
}

message Verify2FAResponse {
    bool verif = 1;
}

message Setup2FARequest {
    string user_id = 1;
}

message Setup2FAResponse {
    string qr_url = 1;
}

message RegisterRequest {
    string login = 1;
    string username = 2;
    string password = 3;
    string role = 4;
}

message RegisterResponse {
    string user_id = 1;
    string message = 2;
}

message LoginRequest {
    string login = 1;
    string password = 2;
    string two_fa_code = 3;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message ValidateTokenRequest {
    string access_token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    string user_id = 2;
}

message GetUserByTokenRequest {
    string access_token = 1;
}

message GetUserByTokenResponse {
    string user_id = 1;
    string login = 2;
    string username = 3;
    string role = 4;
}